# agentic-rag

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: doc_qa.py  weather_assistant.py
src/agent/: __init__.py  pipeline.py  prompts.py  types.py  utils.py
src/agent/context/: __init__.py  compactor.py  manager.py  tokens.py
src/agent/llm/: __init__.py  base.py  factory.py  mock.py  openai_compat.py
src/agent/memory/: __init__.py  base.py
src/agent/stages/: __init__.py  base.py  executor.py  interpreter.py  planner.py  reranker.py  synthesizer.py  validator.py
src/agent/tools/: base.py
src/agentic_rag/: __init__.py  errors.py
src/agentic_rag/llm/: __init__.py  base.py
src/agentic_rag/memory/: __init__.py
src/agentic_rag/stages/: base.py  interpreter.py  planner.py
src/agentic_rag/tools/: __init__.py
tests/: conftest.py  test_compactor.py  test_context.py  test_context_manager.py  test_interpreter.py  test_pipeline.py  test_synthesizer.py  test_tokens.py  test_validator.py
