[project]
name = "joy-agent"
version = "0.1.0"
description = "Joy Agent — the 6-stage agentic RAG pipeline from the KLIMA thesis, open-sourced."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "W", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
